[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Escritorio.webp" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Escritorio" type="Sprite" parent="."]
position = Vector2( 510.5, 301.5 )
scale = Vector2( 1.6278, 1.43165 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 61.0
margin_top = 493.0
margin_right = 270.0
margin_bottom = 580.0
text = "SALVE AQUI"

[node name="ColorRect2" type="ColorRect" parent="Button"]
margin_left = -17.0
margin_top = -319.0
margin_right = 225.0
margin_bottom = -280.0
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Button/ColorRect2"]
modulate = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
self_modulate = Color( 0.054902, 0.0509804, 0.0509804, 1 )
margin_right = 238.0
margin_bottom = 40.0
text = "INSIRA OS DADOS"
align = 1
valign = 1

[node name="Label" type="Label" parent="Button"]
margin_left = -46.0
margin_top = -167.0
margin_right = 265.0
margin_bottom = -20.0

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_left = -45.0
margin_top = -141.0
margin_right = 261.0
margin_bottom = -35.0
align = 3

[node name="LineEdit2" type="LineEdit" parent="Button"]
margin_left = -47.0
margin_top = -266.0
margin_right = 259.0
margin_bottom = -160.0

[node name="Button2" type="Button" parent="."]
margin_left = 419.0
margin_top = 457.0
margin_right = 628.0
margin_bottom = 544.0
text = "CLIQUE AQUI"
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Button2"]
margin_left = -49.0
margin_top = -197.0
margin_right = 263.0
margin_bottom = -20.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="Label" type="Label" parent="Button2"]
margin_left = -46.0
margin_top = -167.0
margin_right = 265.0
margin_bottom = -20.0
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 754.0
margin_top = 458.0
margin_right = 963.0
margin_bottom = 545.0
text = "IMPRIMA OS NOMES"
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Button3"]
margin_left = -49.0
margin_top = -198.0
margin_right = 263.0
margin_bottom = -20.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="Label" type="Label" parent="Button3"]
margin_left = -46.0
margin_top = -167.0
margin_right = 265.0
margin_bottom = -20.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
